base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    environment: develop
    managed-by: terraform
    istio-injection: disabled
