base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hybrid-api
  namespace: app
  labels:
    app: hybrid-api
    environment: develop
spec:
  type: ClusterIP
  selector:
    app: hybrid-api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
